<?xml version="1.0"?>
<package format="2">
  <name>ihmc_ros_control</name>
  <version>0.6.0</version>
  <description>This package provides facilities for using IHMC Java software as
    a ros_control compatible controller through native libraries</description>

  <author email="jsmith@ihmc.us">Jesper Smith</author>
  <author email="dstephen@ihmc.us">Doug Stephen</author>
  <maintainer email="jsmith@ihmc.us">Jesper Smith</maintainer>
  <maintainer email="dstephen@ihmc.us">Doug Stephen</maintainer>

  <url type="website">https://github.org/ihmcrobotics/ihmc_ros_control</url>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>effort_controllers</depend>
  <depend>val_robot_interface</depend>
  <depend>java</depend>

  <export>
    <controller_interface plugin ="${prefix}/whole_robot_controller_plugin.xml"/>
  </export>
</package>
